# TradingBookSimProject

./: AnalyticsTab.qml  CMakeLists.txt  CandlestickChart.qml  Chart.qml  Main.qml  PortfolioTab.qml  README.md  TradingTab.qml  datamanager.cpp  datamanager.h  main.cpp  ordermodel.cpp  ordermodel.h  portfoliomanager.cpp  portfoliomanager.h  resources.qrc  tradingengine.cpp  tradingengine.h
